# braincells-reboot

./: BRAINCELLS_DESKTOP_PLAN.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: inference.rs  mod.rs  models.rs  settings.rs
src-tauri/src/llm/: cloud.rs  local.rs  mod.rs  pool.rs  types.rs
src-tauri/src/models/: cache.rs  download.rs  mod.rs  registry.rs
src/features/main-sidebar/: main-sidebar.tsx
src/routes/auth/: index.tsx
src/routes/home/: index.tsx
src/routes/home/dataset/[id]/: index.tsx
src/routes/home/settings/: index.tsx
src/services/db/: duckdb.ts
src/services/inference/: run-prompt-execution.ts  tauri-bridge.ts
src/services/repository/: cells.spec.tsx
src/services/repository/tables/: create-table-column.spec.tsx  create-table.spec.tsx
src/services/tauri/: index.ts
src/services/websearch/embed/: engine.spec.tsx  engine.ts
tests/: test.csv  test.jsonl
